hphp/hack/test/typecheck/group_use_needs_semicolon.php.exp
File "group_use_needs_semicolon.php", line 20, characters 3-10:
Expected ; (Parsing[1002])
